Start to customize with my information and pics

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Read Only by HTML5 UP</title>
+		<title>Laura Travis's Programming Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,10 +16,10 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Willis Corto</a></h1>
-					<p>I got reprogrammed by a rogue AI<br />
-					and now I'm totally cray</p>
+					<span class="image avatar"><img src="images/avatar.JPG" alt="" /></span>
+					<h1 id="logo"><a href="#">Laura Travis</a></h1>
+					<p>A math major turned programmer<br />
+					Resume and References Available by Request</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -31,9 +31,9 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<!--li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li-->
 						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+						<!--li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li-->
 						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
@@ -53,11 +53,11 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>Read Only</h2>
-										<p>Just an incredibly simple responsive site<br />
-										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
+										<h2>My Programming Portfolio</h2>
+										<p>About Me</p>
 									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+									<p>I am a 33 year-old female with a Bachelor's Degree in Mathematics with a Minor in Computer Science. Since 2021, I have been using sites such as w3schools and codecademy to deepen and expand my programming knowledge. Since 2016, I have worked as a full-time high school math teacher, but I have grown tired of the low pay coupled with the long hours. Programming has always interested me and I have always loved technology, puzzles, and challenging my mind. In the past, I have done some minor modding of computer games and frequently use complex excel formulas and formatting at work to make my job easier.</p>
+									<p>I have greatly enjoyed learning new programming languages and how websites are built and modified. Eventually, I hope to become a remote Software Engineer, but I am currently hoping to find a remote job as a Junior Developer so that I can gain the experience necessary to be a successful Software Engineer. My preferred area of programming is working with Javascript as a back-end developer, but I am comfortable with the front-end as well. As someone who has used multiple websites and programs that are less than ideal and felt the frustration that comes from an incomplete design, I am passionate about helping to create websites that provide an optimal and seamless user experience.</p>
 								</div>
 							</section>
 
@@ -81,7 +81,7 @@
 							<section id="three">
 								<div class="container">
 									<h3>A Few Accomplishments</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<p></p>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
@@ -131,7 +131,7 @@
 							</section>
 
 						<!-- Five -->
-						<!--
+						<!-- Other Style Presets
 							<section id="five">
 								<div class="container">
 									<h3>Elements</h3>
@@ -467,7 +467,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Untitled. All rights reserved.</li><li>Design based on <a href="https://html5up.net/read-only">Read Only</a> by <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
