--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.JPG" alt="" /></span>
+					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Laura Travis</a></h1>
 					<p>A math major turned programmer<br />
 					Resume and References Available by Request</p>
