add skills, remove contact form, rename sections

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Things I Can Do</a></li>
-						<li><a href="#three">A Few Accomplishments</a></li>
-						<li><a href="#four">Contact</a></li>
+						<li><a href="#two">Skills</a></li>
+						<li><a href="#three">My Projects</a></li>
+						<!--li><a href="#four">Contact</a></li-->
 					</ul>
 				</nav>
 				<footer>
@@ -65,14 +65,23 @@
 							<section id="two">
 								<div class="container">
 									<h3>Things I Can Do</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<p>My programming languages include:</p>
 									<ul class="feature-icons">
-										<li class="icon solid fa-code">Write all the code</li>
-										<li class="icon solid fa-cubes">Stack small boxes</li>
-										<li class="icon solid fa-book">Read books and stuff</li>
-										<li class="icon solid fa-coffee">Drink much coffee</li>
+										<li class="icon solid fa-code">Javascript</li>
+										<li class="icon solid fa-code">React</li>
+										<li class="icon solid fa-code">Java</li>
+										<li class="icon solid fa-code">Python</li>
+										<li class="icon solid fa-code">CSS</li>
+										<li class="icon solid fa-code">HTML</li>
+										<li class="icon solid fa-code">SQL</li>
+									</ul>
+									<p>My interests and skills</p>
+									<ul class="feature-icons">
+										<li class="icon solid fa-calculator">Deep Understanding of Mathematics</li>
+										<li class="icon solid fa-puzzle-piece">Solving Puzzles of all kinds</li>
 										<li class="icon solid fa-bolt">Lightning bolt</li>
-										<li class="icon solid fa-users">Shadow clone technique</li>
+										<li class="icon solid fa-people-arrows">Working with others</li>
+										<li class="icon solid fa-user-alt">Working Solo</li>
 									</ul>
 								</div>
 							</section>
@@ -80,7 +89,7 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>A Few Accomplishments</h3>
+									<h3>My Projects</h3>
 									<p></p>
 									<div class="features">
 										<article>
@@ -109,7 +118,7 @@
 							</section>
 
 						<!-- Four -->
-							<section id="four">
+							<!--section id="four">
 								<div class="container">
 									<h3>Contact Me</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
@@ -128,7 +137,7 @@
 										</div>
 									</form>
 								</div>
-							</section>
+							</section-->
 
 						<!-- Five -->
 						<!-- Other Style Presets
