add first batch of project descriptions and links

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Laura Travis</a></h1>
-					<p>A math major turned programmer<br />
+					<p>A Math Major Turned Programmer<br />
 					Resume and References Available by Request</p>
 				</header>
 				<nav id="nav">
@@ -31,11 +31,8 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<!--li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li-->
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<!--li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li-->
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://github.com/LauraRLT" class="icon brands fa-github" target="_blank" rel="noreferrer noopener"><span class="label">Github</span></a></li>
+						<li><a href="mailto:laurarltravis@gmail.com" class="icon solid fa-envelope" target="_blank" rel="noreferrer noopener"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -65,17 +62,18 @@
 							<section id="two">
 								<div class="container">
 									<h3>Things I Can Do</h3>
-									<p>My programming languages include:</p>
+									<h4>My programming languages include:</h4>
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">Javascript</li>
-										<li class="icon solid fa-code">React</li>
+										<li class="icon solid fa-code">React.js</li>
+										<li class="icon solid fa-code">Node.js</li>
 										<li class="icon solid fa-code">Java</li>
 										<li class="icon solid fa-code">Python</li>
 										<li class="icon solid fa-code">CSS</li>
 										<li class="icon solid fa-code">HTML</li>
 										<li class="icon solid fa-code">SQL</li>
 									</ul>
-									<p>My interests and skills</p>
+									<h4>My interests and skills</h4>
 									<ul class="feature-icons">
 										<li class="icon solid fa-calculator">Deep Understanding of Mathematics</li>
 										<li class="icon solid fa-puzzle-piece">Solving Puzzles of all kinds</li>
@@ -93,21 +91,28 @@
 									<p></p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="https://github.com/LauraRLT/FindYourHat.github.io" target="_blank" rel="noreferrer noopener" class="image"><img src="images/find-your-hat-demo.gif" alt="The gif demonstarting the game, provided by codecademy.com" /></a>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Find Your Hat</h4>
+												<h5>Languages used: Javascript, Node, </h5>
+												<p>An interactive terminal game from a codecademy assignment. The scenario is that the player has lost their hat in a field full of holes, and they must navigate back to it without falling down one of the holes or stepping outside of the field. This project required a TON of troubleshooting to figure out the proper logic. I am quite proud of the final result.</p>
+												<p>I created 2 versions of this game:</p>
+													<ul>
+														<li><a href="https://github.com/LauraRLT/FindYourHat.github.io" target="_blank" rel="noreferrer noopener">One based purely in Javascript that I hope to eventually create a github page with</a></li>
+														<li><a href="https://replit.com/@LauraRLT/Find-Your-Hat?v=1#index.js" target="_blank" rel="noreferrer noopener">And one on Replit.com that focuses on the use of the terminal kit and the customization that provides</a></li>
+													</ul>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="https://github.com/LauraRLT/jammming" target="_blank" rel="noreferrer noopener" class="image"><img src="images/pic02.jpg" alt="A preview picture of the jammming project webpage."/></a>
 											<div class="inner">
-												<h4>Terraformed a small moon</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Jammming</h4>
+												<p>a React web application called <a href="">Jammming</a> from a codecademy assignment. It demonstrates the use of my knowledge of React components, passing state, and requests with the Spotify API to build a website that allows users to search the Spotify library, create a custom playlist, then save it to their Spotify account.</p>
 											</div>
 										</article>
+										<!-- blank template for more projects
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="#" target="_blank" rel="noreferrer noopener" class="image"><img src="images/pic03.jpg" alt=""/></a>
 											<div class="inner">
 												<h4>Snapped dark matter in the wild</h4>
 												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
@@ -115,7 +120,7 @@
 										</article>
 									</div>
 								</div>
-							</section>
+							</section> -->
 
 						<!-- Four -->
 							<!--section id="four">
@@ -476,7 +481,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved.</li><li>Design based on <a href="https://html5up.net/read-only">Read Only</a> by <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; LauraRLTravis. All rights reserved.</li><li>Design based on <a href="https://html5up.net/read-only">Read Only</a> by <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
