change name of picture of jammming project

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="https://github.com/LauraRLT/jammming" target="_blank" rel="noreferrer noopener" class="image"><img src="images/pic02.jpg" alt="A preview picture of the jammming project webpage."/></a>
+											<a href="https://github.com/LauraRLT/jammming" target="_blank" rel="noreferrer noopener" class="image"><img src="images/jammming.jpg" alt="A preview picture of the jammming project webpage."/></a>
 											<div class="inner">
 												<h4>Jammming</h4>
 												<p>a React web application called <a href="">Jammming</a> from a codecademy assignment. It demonstrates the use of my knowledge of React components, passing state, and requests with the Spotify API to build a website that allows users to search the Spotify library, create a custom playlist, then save it to their Spotify account.</p>
