add linkedin link and add portfolio to project list

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Read Only by HTML5 UP
+	Created based on the Read Only template by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
@@ -33,6 +33,7 @@
 					<ul class="icons">
 						<li><a href="https://github.com/LauraRLT" class="icon brands fa-github" target="_blank" rel="noreferrer noopener"><span class="label">Github</span></a></li>
 						<li><a href="mailto:laurarltravis@gmail.com" class="icon solid fa-envelope" target="_blank" rel="noreferrer noopener"><span class="label">Email</span></a></li>
+						<li><a href="https://www.linkedin.com/in/laurarltravis" class="icon solid brands fa-linkedin" target="_blank" rel="noreferrer noopener"><span class="label">LinkedIn</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -77,7 +78,6 @@
 									<ul class="feature-icons">
 										<li class="icon solid fa-calculator">Deep Understanding of Mathematics</li>
 										<li class="icon solid fa-puzzle-piece">Solving Puzzles of all kinds</li>
-										<li class="icon solid fa-bolt">Lightning bolt</li>
 										<li class="icon solid fa-people-arrows">Working with others</li>
 										<li class="icon solid fa-user-alt">Working Solo</li>
 									</ul>
@@ -88,12 +88,18 @@
 							<section id="three">
 								<div class="container">
 									<h3>My Projects</h3>
-									<p></p>
+									<article>
+										
+										<div class="inner">
+											<h4><a href="https://github.com/LauraRLT/LRLTPortfolio.github.io" target="_blank" rel="noreferrer noopener">This Portfolio Page</a></h4>
+											<p>I used a css and html template called <a href="https://html5up.net/read-only" target="_blank" rel="noreferrer noopener">Read Only</a> from <a href="http://html5up.net" target="_blank" rel="noreferrer noopener">HTML5 UP</a> and then customized and tweaked it for my needs.</p>
+										</div>
+									</article>
 									<div class="features">
 										<article>
 											<a href="https://github.com/LauraRLT/FindYourHat.github.io" target="_blank" rel="noreferrer noopener" class="image"><img src="images/find-your-hat-demo.gif" alt="The gif demonstarting the game, provided by codecademy.com" /></a>
 											<div class="inner">
-												<h4>Find Your Hat</h4>
+												<h4><a href="https://github.com/LauraRLT/FindYourHat.github.io" target="_blank" rel="noreferrer noopener">Find Your Hat</a></h4>
 												<h5>Languages used: Javascript, Node, </h5>
 												<p>An interactive terminal game from a codecademy assignment. The scenario is that the player has lost their hat in a field full of holes, and they must navigate back to it without falling down one of the holes or stepping outside of the field. This project required a TON of troubleshooting to figure out the proper logic. I am quite proud of the final result.</p>
 												<p>I created 2 versions of this game:</p>
@@ -106,7 +112,7 @@
 										<article>
 											<a href="https://github.com/LauraRLT/jammming" target="_blank" rel="noreferrer noopener" class="image"><img src="images/jammming.jpg" alt="A preview picture of the jammming project webpage."/></a>
 											<div class="inner">
-												<h4>Jammming</h4>
+												<h4><a href="https://github.com/LauraRLT/jammming" target="_blank" rel="noreferrer noopener">Jammming</a></h4>
 												<p>a React web application called <a href="">Jammming</a> from a codecademy assignment. It demonstrates the use of my knowledge of React components, passing state, and requests with the Spotify API to build a website that allows users to search the Spotify library, create a custom playlist, then save it to their Spotify account.</p>
 											</div>
 										</article>
@@ -481,7 +487,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; LauraRLTravis. All rights reserved.</li><li>Design based on <a href="https://html5up.net/read-only">Read Only</a> by <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; LauraRLTravis. All rights reserved.</li><li>Design based on <a href="https://html5up.net/read-only" target="_blank" rel="noreferrer noopener">Read Only</a> by <a href="http://html5up.net" target="_blank" rel="noreferrer noopener">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
