minor wording change

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 										
 										<div class="inner">
 											<h4><a href="https://github.com/LauraRLT/LRLTPortfolio.github.io" target="_blank" rel="noreferrer noopener">This Portfolio Page</a></h4>
-											<p>I used a css and html template called <a href="https://html5up.net/read-only" target="_blank" rel="noreferrer noopener">Read Only</a> from <a href="http://html5up.net" target="_blank" rel="noreferrer noopener">HTML5 UP</a> and then customized and tweaked it for my needs.</p>
+											<p>I used a css and html template called <a href="https://html5up.net/read-only" target="_blank" rel="noreferrer noopener">Read Only</a> from <a href="http://html5up.net" target="_blank" rel="noreferrer noopener">HTML5 UP</a> and then customized and modified it for my needs.</p>
 										</div>
 									</article>
 									<div class="features">
