--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 										<h2>My Programming Portfolio</h2>
 										<p>About Me</p>
 									</header>
-									<p>I am a 33 year-old female with a Bachelor's Degree in Mathematics with a Minor in Computer Science. Since 2021, I have been using sites such as w3schools and codecademy to deepen and expand my programming knowledge. Since 2016, I have worked as a full-time high school math teacher, but I have grown tired of the low pay coupled with the long hours. Programming has always interested me and I have always loved technology, puzzles, and challenging my mind. In the past, I have done some minor modding of computer games and frequently use complex excel formulas and formatting at work to make my job easier.</p>
-									<p>I have greatly enjoyed learning new programming languages and how websites are built and modified. Eventually, I hope to become a remote Software Engineer, but I am currently hoping to find a remote job as a Junior Developer so that I can gain the experience necessary to be a successful Software Engineer. My preferred area of programming is working with Javascript as a back-end developer, but I am comfortable with the front-end as well. As someone who has used multiple websites and programs that are less than ideal and felt the frustration that comes from an incomplete design, I am passionate about helping to create websites that provide an optimal and seamless user experience.</p>
+									<p>I am a 33-year-old female with a Bachelor's Degree in Mathematics and a Minor in Computer Science. Since 2021, I have been using sites such as W3schools and Codecademy to deepen and expand my programming knowledge. In 2016, I began working as a full-time high school math teacher, but I have grown tired of the low pay coupled with the long hours. Programming has always interested me, and I have always loved technology, puzzles, and challenging my mind. In the past, I have done some minor modding of computer games and created complex excel formulas and conditional formatting at work to make my job easier.</p>
+									<p>I have greatly enjoyed learning new programming languages and how websites are built and modified. Eventually, I hope to become a remote Software Engineer, but I am currently hoping to find a remote job as a Junior Developer to the experience necessary to be a successful Software Engineer. My preferred area of programming is working with Javascript as a back-end developer, but I am also comfortable with the front-end. As someone who has used multiple websites and programs that are less than ideal and felt the frustration that comes from an incomplete design, I am passionate about helping to create websites that provide an optimal and seamless user experience.</p>
 								</div>
 							</section>
 
@@ -97,11 +97,11 @@
 									</article>
 									<div class="features">
 										<article>
-											<a href="https://github.com/LauraRLT/FindYourHat.github.io" target="_blank" rel="noreferrer noopener" class="image"><img src="images/find-your-hat-demo.gif" alt="The gif demonstarting the game, provided by codecademy.com" /></a>
+											<a href="https://github.com/LauraRLT/FindYourHat.github.io" target="_blank" rel="noreferrer noopener" class="image"><img src="images/find-your-hat-demo.gif" alt="The gif demonstarting the game, provided by Codecademy.com" /></a>
 											<div class="inner">
 												<h4><a href="https://github.com/LauraRLT/FindYourHat.github.io" target="_blank" rel="noreferrer noopener">Find Your Hat</a></h4>
 												<h5>Languages used: Javascript, Node, </h5>
-												<p>An interactive terminal game from a codecademy assignment. The scenario is that the player has lost their hat in a field full of holes, and they must navigate back to it without falling down one of the holes or stepping outside of the field. This project required a TON of troubleshooting to figure out the proper logic. I am quite proud of the final result.</p>
+												<p>An interactive terminal game from a Codecademy assignment. The scenario is that the player has lost their hat in a field full of holes, and they must navigate back to it without falling down one of the holes or stepping outside of the field. This project required a TON of troubleshooting to figure out the proper logic. I am quite proud of the final result.</p>
 												<p>I created 2 versions of this game:</p>
 													<ul>
 														<li><a href="https://github.com/LauraRLT/FindYourHat.github.io" target="_blank" rel="noreferrer noopener">One based purely in Javascript that I hope to eventually create a github page with</a></li>
@@ -113,7 +113,7 @@
 											<a href="https://github.com/LauraRLT/jammming" target="_blank" rel="noreferrer noopener" class="image"><img src="images/jammming.jpg" alt="A preview picture of the jammming project webpage."/></a>
 											<div class="inner">
 												<h4><a href="https://github.com/LauraRLT/jammming" target="_blank" rel="noreferrer noopener">Jammming</a></h4>
-												<p>a React web application called <a href="">Jammming</a> from a codecademy assignment. It demonstrates the use of my knowledge of React components, passing state, and requests with the Spotify API to build a website that allows users to search the Spotify library, create a custom playlist, then save it to their Spotify account.</p>
+												<p>a React web application called <a href="">Jammming</a> from a Codecademy assignment. It demonstrates the use of my knowledge of React components, passing state, and requests with the Spotify API to build a website that allows users to search the Spotify library, create a custom playlist, then save it to their Spotify account.</p>
 											</div>
 										</article>
 										<!-- blank template for more projects
