--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Laura Travis</a></h1>
-					<p>A Math Major Turned Programmer<br />
+					<p>Math Major Turned Programmer<br />
 					Resume and References Available by Request</p>
 				</header>
 				<nav id="nav">
@@ -54,8 +54,8 @@
 										<h2>My Programming Portfolio</h2>
 										<p>About Me</p>
 									</header>
-									<p>I am a 33-year-old female with a Bachelor's Degree in Mathematics and a Minor in Computer Science. Since 2021, I have been using sites such as W3schools and Codecademy to deepen and expand my programming knowledge. In 2016, I began working as a full-time high school math teacher, but I have grown tired of the low pay coupled with the long hours. Programming has always interested me, and I have always loved technology, puzzles, and challenging my mind. In the past, I have done some minor modding of computer games and created complex excel formulas and conditional formatting at work to make my job easier.</p>
-									<p>I greatly enjoyed learning new programming languages and how to build and modify websites. My goal is to become a remote Software Engineer, but I am currently hoping to find a remote job as a Junior Developer to gain the necessary experience to be a successful Software Engineer. I prefer to work with Javascript as a back-end developer, but I am comfortable with the front-end as well. In general, I prefer to work with the logic of Python, Java, and Javascript over the more open-ended languages such as HTML or CSS. As someone who has used multiple websites and programs that are less than ideal and felt the frustration that comes from an incomplete design, I am passionate about helping to create websites that provide an optimal and seamless user experience.</p>
+									<p>I am a 33-year-old female with a Bachelor's Degree in Mathematics and a Minor in Computer Science. Since 2021, I have been using sites such as W3Schools and Codecademy to deepen and expand my programming knowledge. In 2016, I began working as a full-time high school math teacher, but I have grown tired of the low pay coupled with the long hours. Programming has always interested me, and I have always loved technology, puzzles, and challenging my mind. In the past, I have done some minor modding of computer games and created complex excel formulas and conditional formatting at work to make my job easier.</p>
+									<p>I greatly enjoyed learning new programming languages and how to build and modify websites. In general, I like working with the logic of Python, Java, and Javascript over the more open-ended languages such as HTML or CSS. My goal is to become a remote Software Engineer, but I am currently hoping to find a remote job as a Junior Developer to gain the necessary experience to be successful. I prefer to work with Javascript as a back-end developer, but I am comfortable with the front-end as well. As someone who has used multiple websites and programs that are less than ideal and felt the frustration that comes from an incomplete design, I am passionate about helping to create websites that provide an optimal and seamless user experience.</p>
 								</div>
 							</section>
 
