fix grammar and format header

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Laura Travis</a></h1>
-					<p>Math Major Turned Programmer<br />
-					Resume and References Available by Request</p>
+					<h5 id="subtitle">Math Major Turned Programmer</h5>
+					<p id="references">Resume and References Available by Request</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -92,7 +92,7 @@
 										
 										<div class="inner">
 											<h4><a href="https://github.com/LauraRLT/LRLTPortfolio.github.io" target="_blank" rel="noreferrer noopener">This Portfolio Page</a></h4>
-											<p>I used a css and html template called <a href="https://html5up.net/read-only" target="_blank" rel="noreferrer noopener">Read Only</a> from <a href="http://html5up.net" target="_blank" rel="noreferrer noopener">HTML5 UP</a> and then customized and modified it for my needs.</p>
+											<p>I used a CSS and HTML template called <a href="https://html5up.net/read-only" target="_blank" rel="noreferrer noopener">Read Only</a> from <a href="http://html5up.net" target="_blank" rel="noreferrer noopener">HTML5 UP</a> and then customized and modified it to fit my needs.</p>
 										</div>
 									</article>
 									<div class="features">
@@ -113,7 +113,7 @@
 											<a href="https://github.com/LauraRLT/jammming" target="_blank" rel="noreferrer noopener" class="image"><img src="images/jammming.jpg" alt="A preview picture of the jammming project webpage."/></a>
 											<div class="inner">
 												<h4><a href="https://github.com/LauraRLT/jammming" target="_blank" rel="noreferrer noopener">Jammming</a></h4>
-												<p>a React web application called <a href="">Jammming</a> from a Codecademy assignment. It demonstrates the use of my knowledge of React components, passing state, and requests with the Spotify API to build a website that allows users to search the Spotify library, create a custom playlist, then save it to their Spotify account.</p>
+												<p>A React web application called <a href="">Jammming</a> from a Codecademy assignment. It demonstrates the use of my knowledge of React components, passing state, and requests with the Spotify API to build a website that allows users to search the Spotify library, create a custom playlist, then save it to their Spotify account.</p>
 											</div>
 										</article>
 										<!-- blank template for more projects
