--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 										<p>About Me</p>
 									</header>
 									<p>I am a 33-year-old female with a Bachelor's Degree in Mathematics and a Minor in Computer Science. Since 2021, I have been using sites such as W3Schools and Codecademy to deepen and expand my programming knowledge. In 2016, I began working as a full-time high school math teacher, but I have grown tired of the low pay coupled with the long hours. Programming has always interested me, and I have always loved technology, puzzles, and challenging my mind. In the past, I have done some minor modding of computer games and created complex excel formulas and conditional formatting at work to make my job easier.</p>
-									<p>I greatly enjoyed learning new programming languages and how to build and modify websites. In general, I like working with the logic of Python, Java, and Javascript over the more open-ended languages such as HTML or CSS. My goal is to become a remote Software Engineer, but I am currently hoping to find a remote job as a Junior Developer to gain the necessary experience to be successful. I prefer to work with Javascript as a back-end developer, but I am comfortable with the front-end as well. As someone who has used multiple websites and programs that are less than ideal, I am passionate about helping to create websites and programs that provide an optimal and seamless user experience.</p>
+									<p>I greatly enjoyed learning new programming languages and how to build and modify websites. In general, I like working with the logic of Python, Java, and JavaScript over the more open-ended languages such as HTML or CSS. My goal is to become a remote Software Engineer, but I am currently hoping to find a remote job as a Junior Developer to gain the necessary experience to be successful. I prefer to work with JavaScript as a back-end developer, but I am comfortable with the front-end as well. As someone who has used multiple websites and programs that are less than ideal, I am passionate about helping to create websites and programs that provide an optimal and seamless user experience.</p>
 								</div>
 							</section>
 
@@ -65,7 +65,7 @@
 									<h3>Things I Can Do</h3>
 									<h4>My programming languages include:</h4>
 									<ul class="feature-icons">
-										<li class="icon solid fa-code">Javascript</li>
+										<li class="icon solid fa-code">JavaScript</li>
 										<li class="icon solid fa-code">React.js</li>
 										<li class="icon solid fa-code">Node.js</li>
 										<li class="icon solid fa-code">Java</li>
@@ -100,11 +100,11 @@
 											<a href="https://github.com/LauraRLT/FindYourHat.github.io" target="_blank" rel="noreferrer noopener" class="image"><img src="images/find-your-hat-demo.gif" alt="The gif demonstarting the game, provided by Codecademy.com" /></a>
 											<div class="inner">
 												<h4><a href="https://github.com/LauraRLT/FindYourHat.github.io" target="_blank" rel="noreferrer noopener">Find Your Hat</a></h4>
-												<h5>Languages used: Javascript, Node, </h5>
+												<h5>Languages used: JavaScript, Node, </h5>
 												<p>An interactive terminal game from a Codecademy assignment. The scenario is that the player has lost their hat in a field full of holes, and they must navigate back to it without falling down one of the holes or stepping outside of the field. This project required a TON of troubleshooting to figure out the proper logic. I am quite proud of the final result.</p>
 												<p>I created 2 versions of this game:</p>
 													<ul>
-														<li><a href="https://github.com/LauraRLT/FindYourHat.github.io" target="_blank" rel="noreferrer noopener">One based purely in Javascript that I hope to eventually create a github page with</a></li>
+														<li><a href="https://github.com/LauraRLT/FindYourHat.github.io" target="_blank" rel="noreferrer noopener">One based purely in JavaScript that I hope to eventually create a github page with</a></li>
 														<li><a href="https://replit.com/@LauraRLT/Find-Your-Hat?v=1#index.js" target="_blank" rel="noreferrer noopener">And one on Replit.com that focuses on the use of the terminal kit and the customization that provides</a></li>
 													</ul>
 											</div>
